# rcedit-gui

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: app.manifest  main.cpp
